<resources>
    <string name="app_name">CBA Localisation</string>
    <string name="info">Info</string>
    <string name="legend">Légende</string>
    <string name="voici_la_page_des_informations">Voici la page des informations</string>
    <string name="title_activity_admin_login">Mode administrateur</string>
    <string name="prompt_email">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="welcome">"Bonjour !"</string>
    <string name="invalid_username">Nom d\'utilisateur invalide</string>
    <string name="invalid_password">Le mot de passe doit être au moins de 5 caractère</string>
    <string name="login_failed">"Connexion échoué"</string>
    <string name="_1">1</string>
    <string name="nbr5">5</string>
    <string name="nbr4">4</string>
    <string name="nbr3">3</string>
    <string name="nbr2">2</string>
    <string name="nbr1">1</string>
    <string name="Floor1st">1ère étage</string>
    <string name="Floor2nd">2ième étage</string>
    <string name="Floor3rd">3ième étage</string>
    <string name="Floor4th">4ième étage</string>
    <string name="Floor5th">5ième étage</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="nom">Nom</string>
    <string name="description">Description</string>
    <string name="couleur_html">Couleur HTML</string>
    <string name="ajout_de_locaux">Ajout de locaux</string>
    <string name="tage">Étage</string>
    <string name="not_found">Local inexistant</string>
    <string name="position">Votre Position</string>
    <string name="destination">Votre Destination</string>
    <string name="enteryourposition">Veuillez entrer votre position</string>
    <string name="enteryourdestination">Veuillez entrer votre destination</string>
    <string name="annuler_le_trajet">Annuler le trajet</string>
    <string name="msg_trajet_annule">Votre trajet a été annulé</string>
    <string name="mettre_jour_la_position">Mettre à jour la position</string>
    <string name="msg_update_position">Votre position a été mise à jour</string>
    <string name="msg_no_position_entered">Vous n\'avez pas entré de destination</string>
    <string name="msg_not_good_path">Veuillez revenir sur vos pas</string>
</resources>
