<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/photo_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-83dp" />

    <Button
        android:id="@+id/btnFloor5"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:text="@string/nbr5"
        app:layout_constraintBottom_toTopOf="@+id/btnFloor4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnFloor4"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:text="@string/nbr4"
        app:layout_constraintBottom_toTopOf="@+id/btnFloor3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFloor2"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:text="@string/nbr2"
        app:layout_constraintBottom_toTopOf="@+id/btnFloor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFloor3"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:text="@string/nbr3"
        app:layout_constraintBottom_toTopOf="@+id/btnFloor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFloor1"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/nbr1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/coox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/photo_view"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/cooy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coox"
        app:layout_constraintVertical_bias="0.044" />

</androidx.constraintlayout.widget.ConstraintLayout>